[package]
name = "eventcam-tracker"
version = "0.1.0"
authors = ["tstellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
arrayvec = "0.4.10"
nalgebra = "0.18.0"
graphics_buffer = "0.5.6"
piston2d-graphics = "0.30.0"

[dependencies.arcstar]
git = "https://github.com/tstellanova/arcstar"




[dev-dependencies]
#quickcheck = "0.6"
assert_approx_eq = "1.1.0"
criterion = "0.2"
rand = "0.6.5"



#[[bench]]
#name = "datastore_perf"
#harness = false
