[package]
name = "eventcam-tracker"
version = "0.1.0"
authors = ["tstellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
arrayvec = "0.4.10"
nalgebra = "0.18.0"
imageproc = "0.18.0"
image = "0.21.1"
palette = "0.4.1"
rand = "0.6.5"


[dependencies.arcstar]
#path = "../arcstar"
git = "https://github.com/tstellanova/arcstar"


[dev-dependencies]
#assert_approx_eq = "1.1.0"
#criterion = "0.2"



#[[bench]]
#name = "datastore_perf"
#harness = false
